Start about us, fix people rendering on mobile.

--- a/html dummies/screen.lnr.css
+++ b/html dummies/screen.lnr.css
@@ -359,7 +359,7 @@ article p:first-of-type {
 }
 
 article h1 {
-	margin: 3px auto 50px auto;
+	margin: 3x auto 50px auto;
 	font-size: 1.618em;
 	line-height: 1.618;
 }
